cluster/apps/networking/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/appName: traefik
    hajimari.io/enable: "true"
    hajimari.io/icon: web
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "traefik.${CLUSTER_DOMAIN}"
      secretName: traefik-dashboard-tls
  rules:
    - host: "traefik.${CLUSTER_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
